# notification-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.outbox  Dockerfile.outbox.dev  README.md  anvil-notify.yaml  docker-compose.yml
.cargo/: audit.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
.sqlx/: query-13fb8987a8faafdd8fcae486e7a13ff5ea9ed8688f35a2f6345bd84d21096c25.json  query-1721b1f27618ba7188df1db8cd4d9d550c0857dc77116d41bbc760288504d8ff.json  query-190bf56bc86f55545a1e47bff070f0cb422ec2d49c3f012b34dd52ca89e7a580.json  query-2418bad0e442990544cb1211e5f4a4940fa582ff64763f992f9b5c767560c001.json  query-2f85b8caf1eae11344b6d91b24a8d632225971dea51b2d17417e089da7db6e8f.json  query-2f9dc3f3591109e1214fe7a35a4952595fe8b50907bcae07e62aeb1a1ccf20aa.json  query-3742c1e4e9d769e450b85426db58510c9c412fc2bbda7133e5990108b78b8446.json  query-435c1453450e9e418e2ea3f0b024f70f8c9fa85b29d0fa05e985bed088eaeb1f.json  query-4693e9dc1e4087a04b7cb933cfad124ab4a5c3023bc0a8d4ac77ecd8b9506489.json  query-4f097914dd50a338a68be95f4f14e4aa01a4ec505305ef61282f68b53421437f.json  query-563aae5b06c7a868c712092fab62ecf188204071ebfffda81302f7c6402caecc.json  query-5c7b29876aa371fe2382511077394aedaa9a6e31f4cc6435ee2176377a752c0e.json  query-67763633ffbe2727b6949ad4e50926f787911ff24e65dc4ea4ea7a7c919905d3.json  query-6ccb5630bdd72d342f040ef6e17a1628029c9b767ccade96a944e7909d926a7f.json  query-7444e68c4223414a529b1578988ddfaa0e8b9f74ac661ee6d2205ceb3a5ea0ff.json  query-74655e054fd499d33049c275c89db57a7b5bb5f4038fbd02fff58860a1a65fc2.json  query-7e436f9e14d27e541bbf9a7e6d1b1f499b8a749324129f72909650b6eb0f3c2d.json  query-810f8db4e1aa4f3ced056b79a035810177a15e4be4f8749273d9e5ef80a8b33d.json  query-86924c6251f9b7f4791d104dfe7fcf1228cc1a36c23c4529c038eb1ca4350c24.json  query-9c2571e931e0b95f712e66d68ab553609650e10563a05249273d7bdaeeadb101.json  query-a58aff54fde353f180a32762bdc1f9e383301132a2ba22be613cb7f668d19b0e.json  query-b2a6c301e210ff9c22e689a3829d5862fbab4d0758b7e3664b598db1e3eeab9d.json  query-baa9f42774f06c8c2d5f96268b4b7a14a04e79a380663abe008d6d46d8d3af0f.json  query-bdcceb1272a64059e10b348d938cf650e0682657436ec2e1938facf8c21a7a98.json  query-c0c0a7475d8e53a1be49aa234456548c2460c14b7fe6171af014df8a53b3b9a5.json  query-c3f181676cdfc310fc92649b88de1410a4a74dd6fc9793391b99c906b992a5c9.json  query-cbc1b830e445d7d8ae0b222a06932c1dd1a2c49623e4f23dc632ec59dc06c546.json  query-d1ba3f1364b1d25976233ea3b9a7168440f3616bc29aaae14e70a53831a3ac91.json  query-d4108b0572bed2f894a32422bfcbe252c8b1861036d19246ce2d6c96ac0f2c5e.json  query-de98035b59c9ff00ff3406525d6d4ea13ce8aad286dd144665a90a30778f5cd3.json  query-df585b302aca5098ac5ba8907a3e168b1d1b2b81adf54f5009da95052e187013.json  query-e38c67b5709b2b39a3bfa8342459b42bc43ee46e158c1bd923cd236827ac9c4a.json  query-e3b2a496de719b370c7bc87730c0c45ec6961aba8b494328c76b9d3f95e722a0.json  query-e6e74d08539feb98b126a137a66ba014a39ea29aca5d06877436ba4121701d4b.json  query-e9cbf6deab988e6aa16b375eb7a7e20f71dfd223f0cf5d495a55f3d8a055c364.json  query-ebe667942e27a2e3bacdeb085f8de42a3f1997129001c96d7a609144496e2aac.json  query-f8ca55de8bb54fd413937c588f4e5fb861b70b35bfecbfa79f9732f568a8c638.json  query-ff54682f1ba0703265d66dae87016b915df7b36ac6ae45175bcdc7a56af0b449.json
config/: default.toml  local.toml
crates/anctl/: Cargo.toml
crates/anctl/src/: cli.rs  config.rs  main.rs  output.rs
crates/anctl/src/cmd/: blocklist.rs  health.rs  logs.rs  mod.rs  outbox.rs  retry.rs  send.rs  status.rs  template.rs
crates/api/: Cargo.toml
crates/api/src/: errors.rs  handlers.rs  lib.rs  publisher.rs  routes.rs  state.rs
crates/api/tests/: template_api.rs
crates/common/: Cargo.toml
crates/common/src/: email_validation.rs  error.rs  event.rs  lib.rs  log.rs
crates/consumer/: Cargo.toml
crates/consumer/src/: config.rs  delivery.rs  lib.rs  processor.rs  runner.rs  tests.rs
crates/mailer/: Cargo.toml
crates/mailer/src/: fetcher.rs  lib.rs  message.rs  sender.rs  smtp.rs  template.rs  webhook.rs
crates/ns-cli/: Cargo.toml
crates/ns-cli/src/: cli.rs  config.rs  main.rs  output.rs
crates/ns-cli/src/cmd/: health.rs  logs.rs  mod.rs  outbox.rs  retry.rs  send.rs  status.rs  template.rs
crates/outbox/: Cargo.toml
crates/outbox/src/: config.rs  lib.rs  worker.rs
crates/rate_limiter/: Cargo.toml
crates/rate_limiter/src/: lib.rs
crates/recipient_filter/: Cargo.toml
crates/recipient_filter/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: cli_queries.rs  email_log.rs  lib.rs  notification_log.rs  template_store.rs
deploy/: migrate.sh
deploy/grafana/provisioning/dashboards/: anvil-notify.json
deploy/prometheus/: prometheus.yml
migrations/: 0001_create_email_log.sql  0001_initial_schema.sql  0002_create_outbox.sql  0003_add_blocked_status.sql  0004_multi_recipient.sql  0006_outbox_fail_count.sql  0007_email_log_add_payload.sql  0009_email_log_retry_fields.sql  0010_create_email_template.sql  0011_email_log_recipient_name.sql  0012_send_notification_fn.sql  0013_email_log_total_attempts.sql  0015_email_log_event_status_idx.sql  0017_add_generic_templates.sql  0019_upsert_builtin_templates.sql  0020_email_log_cc_bcc.sql  0021_send_notification_fn_cc_bcc.sql  0023_email_log_send_mode_and_event_timestamp.sql  0024_create_notification_log.sql  0025_notification_template.sql  0026_backfill_notification_log.sql  0027_drop_email_log.sql
migrations/business_db/: 0005_outbox_from_override.sql  0008_outbox_attachments.sql  0016_outbox_locked_at.sql  0022_send_notification_fn_send_mode.sql  README.md
scripts/: check_business_db_migrations.sh
src/: config.rs  main.rs  outbox_worker.rs  syslog_layer.rs
