[package]
name    = "anctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anctl"
path = "src/main.rs"

[dependencies]
common  = { path = "../common" }
store   = { path = "../store" }
api     = { path = "../api" }

# Async
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }

# AMQP (re-use same client as the rest of the workspace)
lapin        = "2"

# HTTP (call the running service API)
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap        = { version = "4", features = ["derive", "env"] }
tabled      = "0.16"          # pretty tables in terminal output
dialoguer   = "0.11"          # interactive confirmation prompts
indicatif   = "0.17"          # progress spinners

# Config (re-use the same file format as the service)
config = "0.14"

# DB — pool creation only; all sqlx::query! calls live in the store crate
# so sqlx prepare only needs to run there.
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Tracing (quieter than the service — only warnings by default)
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }