[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common           = { path = "../common" }
store            = { path = "../store" }
recipient_filter = { path = "../recipient_filter" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

axum        = "0.8"
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace"] }
sqlx        = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
lapin       = "2"
subtle      = "2"
metrics     = { workspace = true }