[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }

# SMTP backend — smtp-transport required for AsyncSmtpTransport and transport::smtp
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder", "smtp-transport", "pool"], default-features = false }

# Webhook backend
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Concurrent attachment fetching
futures = "0.3"

# Template engine — Jinja2-compatible, auto-escaping, serde_json Value support
# `speedups` enables v_htmlescape for faster HTML escaping
minijinja = { version = "2", features = ["speedups"] }

base64 = { workspace = true }
metrics = { workspace = true }