[package]
name = "outbox"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }

sqlx  = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
lapin = "2"
futures-lite = "2"
tokio-util   = { version = "0.7" }
metrics = { workspace = true }