[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }

tokio       = { workspace = true, features = ["sync"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }

async-trait = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }